test for personal access token

--- a/script.ipynb
+++ b/script.ipynb
@@ -1390,7 +1390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# I choose to use Random forests (I have tried Decision Trees and SVM in the Appendix)"
+    "# I choose to use Random forests (I tried Decision Trees and SVM in the Appendix)"
    ]
   },
   {
